[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Intruksi_2.jpg" type="Texture" id=1]
[ext_resource path="res://assets/Intruksi_1.jpg" type="Texture" id=2]
[ext_resource path="res://assets/arrow_left.png" type="Texture" id=3]
[ext_resource path="res://assets/arrow_right.png" type="Texture" id=4]
[ext_resource path="res://How_to_play.gd" type="Script" id=5]
[ext_resource path="res://Font/AgencyFB-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 6 )

[node name="How_to_play" type="Node2D"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 640, 360 )
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control"]
margin_left = 1280.0
margin_right = 2560.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 640, 360 )
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/Control/HBoxContainer"]
margin_top = 328.0
margin_right = 64.0
margin_bottom = 392.0
size_flags_vertical = 4
texture_normal = ExtResource( 3 )

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 1216.0
margin_top = 328.0
margin_right = 1280.0
margin_bottom = 392.0
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource( 4 )

[node name="Tween" type="Tween" parent="CanvasLayer/Control"]

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -69.0
size_flags_horizontal = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back_Button" type="Button" parent="CanvasLayer/Control/HBoxContainer2"]
margin_right = 103.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Back"

[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/TextureButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/TextureButton2" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer2/Back_Button" to="." method="_on_Back_Button_pressed"]
